--- a/contact.html
+++ b/contact.html
@@ -101,13 +101,13 @@
                     <span class="d-block">call me</span>+84 353 087 836
                 </p>
                 <ul class="social list-unstyled pt-1 mb-5">
-                    <li class="facebook"><a title="Facebook" href="#"><i class="fa fa-facebook"></i></a>
+                    <li class="facebook"><a title="Facebook" href="http://facebook.com/dat.doox"><i class="fa fa-facebook"></i></a>
                     </li>
-                    <li class="twitter"><a title="Twitter" href="#"><i class="fa fa-twitter"></i></a>
+                    <li class="twitter"><a title="Twitter" href="http://twitter.com/dooxxinhgai"><i class="fa fa-twitter"></i></a>
                     </li>
                     <li class="youtube"><a title="Youtube" href="#"><i class="fa fa-youtube"></i></a>
                     </li>
-                    <li class="dribbble"><a title="Dribbble" href="#"><i class="fa fa-dribbble"></i></a>
+                    <li class="dribbble"><a title="Dribbble" href="https://dribbble.com/dooxxinhgai"><i class="fa fa-dribbble"></i></a>
                     </li>
                 </ul>
             </div>
